manifests/infra/monitoring/gatus/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: monitoring
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: cilium
  hostnames:
    - gatus.cluster.nelsondane.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: gatus
          port: 80
